feat(version): downgrade to java 25 feat(lstm): fixed "return_sequences" parameter not serializing